--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -55,7 +55,7 @@ msgstr "Iniciar Sesión"
 
 #: .\templates\partials\nav.html:20
 msgid "Sign Up"
-msgstr ""
+msgstr "Crear Cuenta"
 
 #: .\templates\rooms\room_detail.html:32
 msgid "Save to Favorites"
